# structdyn

./: .gitignore  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  elcentro_mod.csv  examples.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
examples/: cdf.py  eg_analytical.py  eg_cdf.py  eg_el_centro.py  eg_fdef.py  eg_interpolation.py  eg_mat_models.py  eg_newmark.py  eg_res_spec_el_centro.py  eg_vibration_response.py  el_centro_example.py  example1.py  interpolation.py  newmark.py  res_spec_el_centro.py
examples/mdf/: eg1_mdf.py  eg2_mdf.py  eg_cdm.py  eg_cdm_gm.py  eg_damping_mat.py  eg_mdf_nl.py  eg_multimaterial_nl.py  eg_newmark.py  eg_newmark_gm.py  eg_rsa.py  eg_viz.py  hw4.py  rough.py
examples/sdf/: eg_analytical.py  eg_cdm.py  eg_cdm_nl.py  eg_el_centro.py  eg_ground_motion.py  eg_interpolation.py  eg_newmark.py  eg_newmark_non_linear.py  eg_res_spec_el_centro.py
extra/: LinkedIn post.docx
extra/el-centro/: elcentro.txt  elcentro_mod.txt
github/workflows/: paper.yml
structdyn/: __init__.py  central_difference.py  numerical_methods.py  sdf.py  utils.py
structdyn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
structdyn/ground_motions/: __init__.py  gm_helper.py  ground_motion.py
structdyn/mdf/: __init__.py  mdf.py  modal_analysis.py
structdyn/sdf/: __init__.py  forced_vibration.py  free_vibration.py  response_spectrum.py  sdf.py
structdyn/utils/: __init__.py  (+5 more)
tests/: test_mdf.py  test_sdf.py
(+19 files in other folders)
