[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structdyn"
version = "0.4.0"
description = "A Python library for solving structural dynamics problems"
authors = [
    { name="Abinash Mandal", email="abinashmandal33486@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "importlib-resources; python_version < '3.9'"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
exclude = ["tests"]
