[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structdyn"
version = "0.5.0"
description = "StructDyn: An open-source Python library for structural dynamics analysis"
authors = [
    { name="Abinash Mandal", email="abinashmandal33486@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "importlib-resources; python_version < '3.9'"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
exclude = ["tests"]
